[package]
authors = ["cyqsimon <28627918+cyqsimon@users.noreply.github.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "Rename files to randomly generated strings."
edition = "2021"
exclude = ["/res"]
keywords = ["random", "rename", "filetool"]
license = "AGPL-3.0-only"
name = "rng-rename"
repository = "https://github.com/cyqsimon/rng-rename"
version = "0.6.3"

[dependencies]
ansi_term = "0.12.1"
clap = {version = "4.4.2", features = ["cargo", "derive", "unicode"]}
clap-verbosity-flag = "2.0.1"
clap_complete = "4.4.0"
derivative = "2.2.0"
dialoguer = "0.10.4"
itertools = "0.11.0"
log = "0.4.20"
rand = "0.8.5"
sanitize-filename = "0.5.0"
simple_logger = "4.2.0"
# strum = {version = "0.23.0", features = ["derive"]}
