[package]
authors = ["cyqsimon <28627918+cyqsimon@users.noreply.github.com>"]
categories = ["command-line-utilities", "filesystem"]
description = "Rename files to randomly generated strings."
edition = "2021"
exclude = ["/res"]
keywords = ["random", "rename", "filetool"]
license = "AGPL-3.0-only"
name = "rng-rename"
repository = "https://github.com/cyqsimon/rng-rename"
version = "0.6.5"

[dependencies]
clap = { version = "4.5.23", features = ["cargo", "derive", "unicode"] }
clap-verbosity-flag = "3.0.2"
clap_complete = "4.5.39"
derive_more = { version = "1.0.0", features = ["debug"] }
dialoguer = "0.11.0"
itertools = "0.13.0"
log = "0.4.22"
rand = "0.8.5"
sanitize-filename = "0.6.0"
simple_logger = "5.0.0"
yansi = { version = "1.0.1", features = ["detect-tty", "detect-env"] }
# strum = {version = "0.23.0", features = ["derive"]}
